ingress-controller/ingresses/devops-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devops-internal-ingress
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: "internal-nginx"  
spec:
  tls:
  - hosts:
    - devops-internal.10010sh.cn
    secretName: universal-10010sh-cn-tls
  rules:
  - host: devops-internal.10010sh.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devops-public-ingress
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: "public-nginx"
spec:
  tls:
  - hosts:
    - devops.10010sh.cn
    secretName: universal-10010sh-cn-tls
  rules:
  - host: devops.10010sh.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
