ingress-controller/ingresses/rook-ceph-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rook-ceph-ingress
  namespace: rook-ceph
  annotations:
    kubernetes.io/ingress.class: "internal-nginx"
spec:
  rules:
  - host: rook-ceph-internalk8s.10010sh.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: rook-ceph-mgr-dashboard
          servicePort: 7000
